@@ -6,7 +6,6 @@ import com.example.account.exceptions.CashUserNotFoundException;
 import com.example.account.exceptions.ResourceNotFoundException;
 import com.example.account.services.AccountsService;
 import com.example.account.services.CashUserServiceProxy;
-import jakarta.ws.rs.Path;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.hateoas.EntityModel;
@@ -15,9 +14,8 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 @RestController
 @Slf4j
@@ -34,63 +32,139 @@ public class AccountController {
     }
 
     @GetMapping("/list")
-    public List<EntityModel<AccountDTO>> findAll() {
-        return new ArrayList<>(accountsService.getAll().stream()
+    public ResponseEntity<List<EntityModel<AccountDTO>>> findAll() {
+        log.info("Retrieving all accounts");
+        List<EntityModel<AccountDTO>> accounts = accountsService.getAll().stream()
                 .map(account -> toModel(account, account.getUser_id()))
-                .toList());
+                .collect(Collectors.toList());
+        return new ResponseEntity<>(accounts, HttpStatus.OK);
     }
 
-    @PostMapping("/add/{userID}")
+    @GetMapping("/owner/{accountId}")
+    public ResponseEntity<Object> findAccountOwner(@PathVariable long accountId) {
+        log.info("Retrieving owner for account ID: {}", accountId);
+        try {
+            return new ResponseEntity<>(accountsService.getAccountOwner(accountId), HttpStatus.OK);
+        } catch (ResourceNotFoundException ex) {
+            log.error("Account owner not found: {}", ex.getMessage());
+            return new ResponseEntity<>(ex.getMessage(), HttpStatus.BAD_REQUEST);
+        }
+    }
+
+    @PostMapping("/create/{userID}")
     public ResponseEntity<Object> createAccount(@RequestBody AccountDTO account, @PathVariable Long userID) {
-        CashUserDTO user = cashUserServiceProxy.findById(userID);
-        if (user == null) {
-            return new ResponseEntity<>("No user found.", HttpStatus.BAD_REQUEST);
-        } else {
-            AccountDTO createdAccount = accountsService.createAccount(account, userID);
-            EntityModel<AccountDTO> model = toModel(createdAccount, userID);
+        log.info("Creating account for user ID: {}", userID);
+        try {
+            CashUserDTO user = cashUserServiceProxy.findById(userID);
+            if (user == null) {
+                log.error("User not found for ID: {}", userID);
+                return new ResponseEntity<>("No user found.", HttpStatus.BAD_REQUEST);
+            } else {
+                AccountDTO createdAccount = accountsService.createAccount(account, userID);
+                EntityModel<AccountDTO> model = toModel(createdAccount, userID);
+                return new ResponseEntity<>(model, HttpStatus.OK);
+            }
+        } catch (Exception ex) {
+            log.error("Error creating account: {}", ex.getMessage());
+            return new ResponseEntity<>(ex.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    @GetMapping("/{accountID}")
+    public ResponseEntity<Object> findAccount(@PathVariable long accountID) {
+        log.info("Retrieving account ID: {}", accountID);
+        try {
+            AccountDTO account = accountsService.getById(accountID);
+            EntityModel<AccountDTO> model = toModel(account, account.getUser_id());
             return new ResponseEntity<>(model, HttpStatus.OK);
+        } catch (ResourceNotFoundException ex) {
+            log.error("Account not found: {}", ex.getMessage());
+            return new ResponseEntity<>(ex.getMessage(), HttpStatus.BAD_REQUEST);
         }
     }
 
-    @PostMapping("/addMember/{accountId}/{userID}")
-    public ResponseEntity<Object> addMemberToAccount(@PathVariable Long accountId, @PathVariable Long userID){
-        try{
-            accountsService.addAccountMember(accountId, userID);
-            return new ResponseEntity<>("User added succesfully", HttpStatus.OK);
-        }catch(CashUserNotFoundException ex){
-            return new ResponseEntity<>("Couldn't add user to account.", HttpStatus.BAD_REQUEST);
-
+    @PatchMapping("/{accountID}")
+    public ResponseEntity<Object> updateAccountName(@PathVariable long accountID, @RequestBody AccountDTO newAccount) {
+        log.info("Updating account name for ID: {}", accountID);
+        try {
+            AccountDTO account = accountsService.updateAccount(accountID, newAccount.getName());
+            EntityModel<AccountDTO> model = toModel(account, accountID);
+            return new ResponseEntity<>(model, HttpStatus.OK);
+        } catch (ResourceNotFoundException ex) {
+            log.error("Account not found: {}", ex.getMessage());
+            return new ResponseEntity<>(ex.getMessage(), HttpStatus.BAD_REQUEST);
         }
-    }
-
-    @GetMapping("/members/{accountId}")
-    public void getMembersForAccount(@PathVariable Long accountId){
-        
-    }
-
-    @GetMapping("/{userID}")
-    public List<AccountDTO> findAllUserAccounts(@PathVariable long userID){
-       return accountsService.getAllAccountsOwnedByUser(userID);
     }
 
     @DeleteMapping("/delete/{accountID}")
     public ResponseEntity<Object> deleteAccount(@PathVariable Long accountID) {
+        log.info("Deleting account ID: {}", accountID);
         try {
             accountsService.removeAccount(accountID);
-            return new ResponseEntity<>("Account deleted successfully", HttpStatus.OK);
+            return new ResponseEntity<>("Account deleted successfully.", HttpStatus.OK);
         } catch (ResourceNotFoundException ex) {
-            return new ResponseEntity<>("No account found.", HttpStatus.BAD_REQUEST);
+            log.error("Account not found: {}", ex.getMessage());
+            return new ResponseEntity<>(ex.getMessage(), HttpStatus.BAD_REQUEST);
+        }
+    }
+
+    @PostMapping("/addMember/{accountId}/{userID}")
+    public ResponseEntity<Object> addMemberToAccount(@PathVariable Long accountId, @PathVariable Long userID) {
+        log.info("Adding member to account ID: {}", accountId);
+        try {
+            accountsService.addAccountMember(accountId, userID);
+            AccountDTO account = accountsService.getById(accountId);
+            EntityModel<AccountDTO> model = toModel(account, accountId);
+            return new ResponseEntity<>(model, HttpStatus.OK);
+        } catch (CashUserNotFoundException ex) {
+            log.error("User not found: {}", ex.getMessage());
+            return new ResponseEntity<>(ex.getMessage(), HttpStatus.BAD_REQUEST);
+        } catch (ResourceNotFoundException ex) {
+            log.error("Account not found: {}", ex.getMessage());
+            return new ResponseEntity<>(ex.getMessage(), HttpStatus.BAD_REQUEST);
+        }
+    }
+
+    @GetMapping("/members/{accountId}")
+    public ResponseEntity<Object> getMembersForAccount(@PathVariable Long accountId) {
+        log.info("Retrieving members for account ID: {}", accountId);
+        try {
+            List<String> response = accountsService.getAccountMembers(accountId).stream()
+                    .map(CashUserDTO::getName)
+                    .collect(Collectors.toList());
+            return new ResponseEntity<>(response, HttpStatus.OK);
+        } catch (ResourceNotFoundException ex) {
+            log.error("Account not found: {}", ex.getMessage());
+            return new ResponseEntity<>(ex.getMessage(), HttpStatus.BAD_REQUEST);
+        }
+    }
+
+    @DeleteMapping("/members/{accountId}/{userId}")
+    public ResponseEntity<Object> removeMembersFromAccount(@PathVariable Long accountId, @PathVariable Long userId) {
+        log.info("Removing member from account ID: {}", accountId);
+        try {
+            String response = accountsService.removeAccountMember(accountId, userId);
+            return new ResponseEntity<>(response, HttpStatus.OK);
+        } catch (ResourceNotFoundException ex) {
+            log.error("Account or user not found: {}", ex.getMessage());
+            return new ResponseEntity<>(ex.getMessage(), HttpStatus.BAD_REQUEST);
         }
     }
 
     private EntityModel<AccountDTO> toModel(AccountDTO accountDTO, Long userId) {
-        AccountDTO accountModel = new AccountDTO(accountDTO.getId(), accountDTO.getName(), userId);
-        EntityModel<AccountDTO> model = EntityModel.of(accountModel);
+        EntityModel<AccountDTO> model = EntityModel.of(accountDTO);
 
+        model.add(WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AccountController.class).findAccount(accountDTO.getId())).withSelfRel());
         model.add(WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AccountController.class).findAll()).withRel("all-accounts"));
-        model.add(WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AccountController.class).createAccount(null, null)).withRel("create-account"));
+        model.add(WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AccountController.class).createAccount(null, userId)).withRel("create-account"));
         model.add(WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AccountController.class).deleteAccount(accountDTO.getId())).withRel("delete-account"));
+        model.add(WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AccountController.class).addMemberToAccount(accountDTO.getId(), userId)).withRel("add-member"));
+        model.add(WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AccountController.class).findAccountOwner(accountDTO.getId())).withRel("account-owner"));
+        model.add(WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AccountController.class).getMembersForAccount(accountDTO.getId())).withRel("account-members"));
+        model.add(WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AccountController.class).updateAccountName(accountDTO.getId(), accountDTO)).withRel("update-account-name"));
+        model.add(WebMvcLinkBuilder.linkTo(WebMvcLinkBuilder.methodOn(AccountController.class).removeMembersFromAccount(accountDTO.getId(), userId)).withRel("remove-member"));
 
         return model;
     }
+
 }
